--- a/src/assets/sass/layout/_header.scss
+++ b/src/assets/sass/layout/_header.scss
@@ -7,7 +7,8 @@
 /* Header */
 
 #header {
-  @include color(accent1);
+  // @include color(accent1);
+  @include color(accentMe);
   @include padding(4.5em, 0);
   @include vendor('align-items', 'center');
   @include vendor('display', 'flex');
