--- a/src/assets/sass/libs/_vars.scss
+++ b/src/assets/sass/libs/_vars.scss
@@ -32,7 +32,19 @@
 		border:				#e6e6e6,
 		border-bg:			rgba(144,144,144,0.075),
 		border2:			#d6d6d6,
-		border2-bg:			rgba(144,144,144,0.15),
+    border2-bg:			rgba(144,144,144,0.15),
+
+		accentMe: (
+			bg:				#5d94e1,
+			fg:				mix(#ffffff, #ffffff, 25%),
+			fg-bold:		#ffffff,
+			fg-light:		mix(#5d94e1, #ffffff, 40%),
+			border:			rgba(255,255,255,0.25),
+			border-bg:		rgba(255,255,255,0.075),
+			border2:		rgba(255,255,255,0.5),
+			border2-bg:		rgba(255,255,255,0.2),
+			invert:			true
+		),
 
 		accent1: (
 			bg:				#4696e5,
