--- a/src/assets/sass/libs/_vars.scss
+++ b/src/assets/sass/libs/_vars.scss
@@ -34,7 +34,7 @@
 		border2:			#d6d6d6,
     border2-bg:			rgba(144,144,144,0.15),
 
-		accentMe: (
+		accentCustom: (
 			bg:				#5d94e1,
 			fg:				mix(#ffffff, #ffffff, 25%),
 			fg-bold:		#ffffff,
