--- a/src/assets/sass/components/_spotlight.scss
+++ b/src/assets/sass/components/_spotlight.scss
@@ -12,14 +12,15 @@
 		margin: 0 0 _size(element-margin) 0;
 
 		.image {
-			width: 30%;
-			border-radius: 100%;
+			width: 25%;
+			// width: 30%;
+			// border-radius: 100%;
 			margin: 0 (_size(element-margin) * 1.5) 0 0;
 			display: block;
 
 			img {
 				display: block;
-				border-radius: 100%;
+				// border-radius: 100%;
 				width: 100%;
 			}
 		}
