--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -55,7 +55,9 @@
 	@import 'components/section';
 	@import 'components/spotlight';
 	@import 'components/table';
-	@import 'components/wrapper';
+  @import 'components/wrapper';
+
+	@import 'components/custom';
 
 // Layout.
 
